@@ -28,6 +28,7 @@ EXTRA_DIST = \
 	null.post.exp null.stderr.exp null.vgtest \
 	one.post.exp one.post.exp2 one.stderr.exp one.vgtest \
 	overloaded-new.post.exp overloaded-new.stderr.exp overloaded-new.vgtest \
+	pages_as_heap.stderr.exp pages_as_heap.vgtest \
 	peak.post.exp peak.stderr.exp peak.vgtest \
 	peak2.post.exp peak2.stderr.exp peak2.vgtest \
 	realloc.post.exp realloc.stderr.exp realloc.vgtest \
@@ -57,6 +58,7 @@ check_PROGRAMS = \
 	null \
 	one \
 	overloaded-new \
+	pages_as_heap \
 	peak \
 	realloc \
 	thresholds \
